# cross-pile

./: .gitignore  Anchor.example.toml  Anchor.toml  README.md  package-lock.json  package.json
app/: challenge.ts  sessions.js  sessions.ts  solrandSession.ts  utils.ts
programs/cross-pile/: Cargo.toml
programs/cross-pile/src/: lib.rs
tests/: accept-challenge.ts  approve-acceptor-wager.ts  cancel-after-acceptor.ts  cancel-before-acceptor.ts  cross-pile.ts  decline-acceptor-wager.ts  new-challenge.ts  reveal-winner.ts
