[package]
name = "cross-pile"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross_pile"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
solrand = { version = "0.1.5", features = ["cpi"] }